--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,7 +31,7 @@
     <h1>Your Email is Verified . </h1>
     <h2>Kindly click on the link below to navigate on the main website  </h2>
     
-    <a href="http://localhost:3000/login">  Login to the Website </a>
+    <a href="https://give-metask.vercel.app/login">  Login to the Website </a>
 
     <div class="img" >
         <img src="/loader.gif" alt="gif-loader">
